style: correct registration instructions alignment on tiny screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,6 +170,7 @@ footer i {
 #signup_form ul {
     margin-top: 30px;
     margin-bottom: 30px;
+    padding-left: 0px;
 }
 
 .login li, #signup_form li {
